# vectra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  required_libs.txt  update_submodules.bat  update_submodules.sh
docs/: SCENE_SCHEMA.md
include/vectra/: particle.cpp  particle.h
include/vectra/core/: engine.h  engine_state.h  gameobject.h  gameobject_snapshot.h  render_queue.h  scene.h  scene_serializer.h  scene_snapshot.h
include/vectra/physics/: BVHNode.h  collider_primitive.h  collision_contact.h  collision_data.h  collision_handler.h  force.h  force_generator.h  force_registry.h  rigidbody.h  transform.h
include/vectra/physics/bounding_volumes/: bounding_sphere.h
include/vectra/physics/colliders/: collider_box.h  collider_sphere.h
include/vectra/physics/forces/: anchored_spring.h  newtonian_gravity.h  object_anchored_spring.h  simple_gravity.h
include/vectra/rendering/: camera.h  debug_drawer.h  engine_ui.h  framebuffer.h  light_source.h  light_sources.h  mesh.h  model.h  renderer.h  scene_lights.h  shader.h  skybox.h  texture.h  utils.h  vertex.h
resources/Examples/: complete_scene.json  minimal_scene.json
resources/drafts/: bouncing_balls.txt  constraint_test.txt  softbody.txt
resources/models/debugging/: spring.mtl  vector.mtl
resources/models/primitives/: cube.mtl  sphere.mtl
resources/scenes/: balls_colliding.json  default_scene.json  demo.json  demo_2.json  double_pendulum.json  falling_block.json
resources/shaders/: blinn_phong.frag  model.vert  object.vert  phong.frag  phong_multiple.frag  shadow_mapping_depth.frag  test.vert
src/: main.cpp
src/core/: CMakeLists.txt  README.md  engine.cpp  gameobject.cpp  scene.cpp  scene_serializer.cpp
src/physics/: CMakeLists.txt  README.md  collider_primitive.cpp  collision_contact.cpp  collision_data.cpp  collision_handler.cpp  force.cpp  force_registry.cpp  rigidbody.cpp  transform.cpp
src/physics/bounding_volumes/: bounding_sphere.cpp
src/physics/colliders/: collider_box.cpp  collider_sphere.cpp
src/physics/forces/: anchored_spring.cpp  newtonian_gravity.cpp  object_anchored_spring.cpp  simple_gravity.cpp
src/rendering/: CMakeLists.txt  README.md  camera.cpp  debug_drawer.cpp  engine_ui.cpp  framebuffer.cpp  light_source.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  skybox.cpp
